backyend-deployment.yaml
<<<<<<< HEAD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ani6143/backend-image
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1500m
              memory: 512Mi
            requests:
              cpu: 800m
=======
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ani6143/backend-image
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1500m
              memory: 512Mi
            requests:
              cpu: 800m
>>>>>>> 6e798aee3f8ac5d3b5200b6d025fe04f80b5cdb7
              memory: 256Mi
