backend-service.yaml
<<<<<<< HEAD
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
=======
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
>>>>>>> 6e798aee3f8ac5d3b5200b6d025fe04f80b5cdb7
      targetPort: 8080
