frontend-service.yaml
<<<<<<< HEAD
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
=======
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
>>>>>>> 6e798aee3f8ac5d3b5200b6d025fe04f80b5cdb7
      targetPort: 3000
